Refactor and cleanup

--- a/home_fix/user_center/templates/user_center/notifications.html
+++ b/home_fix/user_center/templates/user_center/notifications.html
@@ -127,13 +127,13 @@
                     </div>
                 {% endfor %}
             </div>
-
+        </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="<a href=" https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" target="_blank"
-    rel="noreferrer noopener">https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js</a>"></script>
-    <script src="<a href=" https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" target="_blank"
-    rel="noreferrer noopener">https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js</a>"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" target="_blank"
+    rel="noreferrer noopener"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" target="_blank"
+    rel="noreferrer noopener"></script>
     </body>
     </html>
 {% endblock %}
