--- a/home_fix/basic/templates/basic/layout.html
+++ b/home_fix/basic/templates/basic/layout.html
@@ -32,7 +32,7 @@
 </head>
 <body>
 <!--Navbar-->
-<header class="p-3 bg-dark text-white shadow p-3 mb-4">
+<header class="p-3 bg-dark text-white shadow">
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <a class="navbar-brand" href="{% url 'basic:index' %}" style="color: white;">
