Integrate google autosearch

--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -171,12 +171,8 @@
                                 <div class="clearfix"></div>
                                 <div class="bot-border"></div>
                                 <div class="col justify-content-center align-self-center text-center mt-3">
-                                    {#                <button type="button" class="btn btn-lg btn-warning">#}
-                                    {#                    <a href="{% url 'user_center:profile_editor' %}" role="button">#}
-                                    {#                        Edit your information#}
-                                    {#                    </a>#}
-                                    {#                </button>#}
-                                    <a class="btn btn-warning" href="{% url 'user_center:profile_editor' %}" role="button">Edit Profile</a>
+                                    <a class="btn btn-warning" href="{% url 'user_center:profile_editor' %}"
+                                       role="button">Edit Profile</a>
                                 </div>
 
                             </div>
