--- a/home_fix/users/templates/registration/password_reset_complete.html
+++ b/home_fix/users/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 
 {% block content %}
   <p>
-    Your password has been set. You may go ahead and <a href="{% url 'users:login' %}">sign in</a> now.
+    Your password has been set. You may go ahead and <a href="{% url 'basic:index' %}">sign in</a> now.
   </p>
 {% endblock %}
