--- a/home_fix/user_center/templates/user_center/profile_editor.html
+++ b/home_fix/user_center/templates/user_center/profile_editor.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <form class="form-horizontal" role="form" method="post" id="customuser_form"
-                      action="{% url 'user_center:profile' %}">
+                      action="{% url 'user_center:profile_editor' %}">
                     {% csrf_token %}
 
                     <div class="card">
@@ -159,7 +159,7 @@
                                         </div>
                                         <div class="clearfix"></div>
                                         <div class="bot-border"></div>
-                                        <div class="col justify-content-center align-self-center text-center mt-3">
+                                        <div class="col justify-content-center align-self-center text-center mt-3 form-group">
                                             <a class="btn btn-success" href=""
                                                role="button">Submit</a>
                                         </div>
