--- a/home_fix/user_center/templates/user_center/profile_editor.html
+++ b/home_fix/user_center/templates/user_center/profile_editor.html
@@ -38,7 +38,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <form class="form-horizontal" role="form" method="post" id="customuser_form"
-                      action="{% url 'user_center:profile' %}">
+                      action="{% url 'user_center:profile_editor' %}">
                     {% csrf_token %}
 
                     <div class="card">
