--- a/home_fix/users/templates/users/register.html
+++ b/home_fix/users/templates/users/register.html
@@ -96,7 +96,7 @@
                             {% endif %}
                         </div>
                         <div id="passwordHelpBlock" class="form-text">
-                            Your password must be 8-20 characters long, contain letters and numbers.
+                            Your password must be 8-20 characters long, contain letters, symbols and numbers.
                         </div>
                         <br>
                         <!-- Submit button -->
